--- a/api/build.gradle
+++ b/api/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-jooq'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
 //	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter'
